Fix consenso estricto