@@ -1,6 +1,6 @@
 package ar.edu.utn.dds.k3003.bll.consenso;
 
-import ar.edu.utn.dds.k3003.facades.dtos.HechoDTO;
+import ar.edu.utn.dds.k3003.dto.HechoDTO;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -9,14 +9,14 @@ public class AlMenosDos implements Consenso {
 
     public List<HechoDTO> obtenerHechos(List<List<HechoDTO>> hechosPorFuente) {
         return hechosPorFuente.stream()
-                .flatMap(List::stream)
-                .collect(Collectors.groupingBy(
-                        HechoDTO::id,
-                        Collectors.toList()
-                ))
-                .entrySet().stream()
-                .filter(entry -> entry.getValue().size() >= REPETICIONES)
-                .map(entry -> entry.getValue().getFirst())
-                .toList();
+            .flatMap(List::stream)
+            .collect(Collectors.groupingBy(
+                    HechoDTO::getId,
+                    Collectors.toList()
+            ))
+            .entrySet().stream()
+            .filter(entry -> entry.getValue().size() >= REPETICIONES)
+            .map(entry -> entry.getValue().getFirst())
+            .toList();
     }
 }
